# quantum-convolutional-classifier

./: .gitignore  LICENSE  README.md  c2q_m2.ipynb  env.sh  main.py  playground.ipynb  pyproject.toml  requirements.txt
docs/: convolution.ipynb  convolution_depth.ipynb  convolution_pennylane.ipynb  convolution_pooling.ipynb  convolution_pooling_qiskit.ipynb  convolution_qiskit.ipynb  mqccLayer_test.ipynb  mqcc_fullyconnected.ipynb  mqcc_layer.ipynb  pooling_2norm.ipynb  pooling_avg.ipynb
docs/figure_generation/: fidelity.ipynb
examples/: convolution.ipynb  convolution_pennylane.ipynb  convolution_pooling_qiskit.ipynb  depth.md  mqcc_fullyconnected.ipynb  mqcc_layer.ipynb  pooling_2norm.ipynb  pooling_avg.ipynb
examples/figure_generation/: generate_graph.ipynb
examples/potentially_outdated/: convolution_pooling.ipynb  convolution_pooling_qiskit.ipynb
img/audio/: choirOrff_2^08.flac  choirOrff_2^09.flac  choirOrff_2^10.flac  choirOrff_2^11.flac  choirOrff_2^12.flac  choirOrff_2^13.flac  choirOrff_2^14.flac  choirOrff_2^15.flac  choirOrff_2^16.flac  choirOrff_2^17.flac  choirOrff_2^18.flac  (+2 more)
latex/: Makefile  main.tex  notes.md  refs.bib
presentations/: 2023_03_21_v01.key  2023_04_07_v02.key
pytorch/: convolution_neural_network.ipynb  mnist_net.pth  model.pth  model_weights.pth  pytorch_tutorial.ipynb
quantum_convolution/: convolution_1d.ipynb  convolution_2d.ipynb  playground.ipynb
src/: ansatz.py  ansatz_old.py  data.py  image_processing.py  kuarq.py  optimizer.py  qcnn.py  qcnn_old.py  training.py
test/: convolution.ipynb  convolution2.ipynb  convolution_pooling_qiskit.ipynb  convolution_qiskit.ipynb  direct_cifar10_32x32.toml  direct_mnist_28x28.toml  generate_graph.ipynb  playground.ipynb  playground1.ipynb  run.sh  sbatch.sh  script.py  test.ipynb  test.sh
(+1106 files in other folders)
