[build-system]
requires = ["setuptools"]
# requires-python = ">=3.10"
build-backend = "setuptools.build_meta"

[project]
name = "qcc"
dynamic = ["version"] # "dependencies"
dependencies = [
    "attrs",
    "PennyLane",
    "qiskit",
    "torch",
    "torchvision",
    "Pillow",
    "astropy",
    "polars>=0.18",
    "matplotlib",
    "click",
]

[project.optional-dependencies]
development = ["black", "pylint", "ipykernel", "pylatexenc"]

[project.scripts]
qcc = "qcc.cli:cli"
