[build-system]
requires = ["setuptools"]
# requires-python = ">=3.10"
build-backend = "setuptools.build_meta"

[project]
name = "qcc"
dynamic = ["version"] # "dependencies"
dependencies = [
    "attrs",
    "PennyLane",
    "qiskit",
    "qiskit_machine_learning",
    "qiskit-aer",
    "torch",
    "torchvision",
    "Pillow",
    "astropy",
    "polars>=0.18",
    "matplotlib",
    "click",
    "plotly",
    "kaleido",
]

[project.optional-dependencies]
dev = ["black", "pylint", "jupyter", "pylatexenc", "sympy"]

[project.scripts]
qcc = "qcc.cli:cli"
